<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color_background"
    android:orientation="vertical">

    <!-- task tab LinearLayout -->
    <LinearLayout
        android:id="@+id/forth_id_top_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color_top_tab"
        android:orientation="horizontal"></LinearLayout>

    <!-- label tab LinearLayout -->
    <LinearLayout
        android:id="@+id/forth_id_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color_label"
        android:orientation="horizontal">

        <!-- show app_name-->
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/text_color_87"
            android:textSize="@dimen/text_size_app_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0" />

        <ImageButton
            android:id="@+id/forth_id_img_show_is_played"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_mid"
            android:background="@color/alpha100"
            android:onClick="stop_Or_start"
            android:src="@drawable/played4" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_small"
        android:gravity="center"
        android:paddingTop="@dimen/padding_mid"
        android:text="@string/evaluate_myself"
        android:textSize="@dimen/text_size_app_name" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_small"
        android:gravity="center"
        android:text="@string/evaluate_1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_small"
        android:gravity="center"
        android:text="@string/evaluate_2" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_small"
        android:gravity="center"
        android:text="@string/evaluate_3" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/evaluate_4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_size_app_name"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:visibility="invisible" />

        <ImageButton
            android:id="@+id/forth_id_img_last_page"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/padding_mid"
            android:layout_weight="1.0"
            android:background="@color/alpha100"
            android:onClick="toLastPage"
            android:src="@drawable/last" />


        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:visibility="invisible" />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/padding_mid"
        android:text="@string/contact_way"
        android:textSize="@dimen/text_size_app_name" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="right"
            android:text="@string/phone" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.0"
            android:gravity="left"
            android:text="@string/phone_number" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="right"
            android:text="@string/email" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.0"
            android:gravity="left"
            android:text="@string/email_address" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="right"
            android:text="@string/address" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.0"
            android:gravity="left"
            android:text="@string/address_" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/github" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="right"
            android:text="@string/git_hub" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.0"
            android:autoLink="web"
            android:gravity="left"
            android:linksClickable="true"
            android:text="@string/go_to_git_hub" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/padding_small"
        android:background="@color/alpha100"
        android:drawableTop="@drawable/phone_him"
        android:onClick="phoneHim"
        android:text="@string/call"
        android:textColor="@color/background_color_label" />

</LinearLayout>
