<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color_background"
    android:orientation="vertical">

    <!-- task tab LinearLayout -->
    <LinearLayout
        android:id="@+id/second_id_top_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color_top_tab"
        android:orientation="horizontal"></LinearLayout>

    <!-- label tab LinearLayout -->
    <LinearLayout
        android:id="@+id/second_id_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color_label"
        android:orientation="horizontal">

        <!-- show app_name-->
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/text_color_87"
            android:textSize="@dimen/text_size_app_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0" />

        <ImageButton
            android:id="@+id/second_id_img_show_is_played"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_mid"
            android:background="@color/alpha100"
            android:onClick="stop_Or_start"
            android:src="@drawable/played4" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/padding_mid"
        android:textSize="@dimen/text_size_app_name"
        android:text="@string/learned" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="right|center_vertical"
            android:paddingTop="@dimen/padding_mid"
            android:text="@string/c" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="left|center_vertical"
            android:paddingTop="@dimen/padding_mid"
            android:text="@string/js" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="right|center_vertical"
            android:paddingTop="@dimen/padding_mid"
            android:text="@string/java" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="left|center_vertical"
            android:paddingTop="@dimen/padding_mid"
            android:text="@string/data" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="right|center_vertical"
            android:paddingTop="@dimen/padding_mid"
            android:text="@string/vb" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="left|center_vertical"
            android:paddingTop="@dimen/padding_mid"
            android:text="@string/sql" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="right|center_vertical"
            android:paddingTop="@dimen/padding_mid"
            android:text="@string/jsp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="left|center_vertical"
            android:paddingTop="@dimen/padding_mid"
            android:text="@string/so_on" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_size_app_name"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/second_id_img_last_page"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/padding_mid"
            android:layout_weight="2.0"
            android:background="@color/alpha100"
            android:onClick="toLastPage"
            android:src="@drawable/last" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:visibility="invisible" />

        <ImageButton
            android:id="@+id/second_id_img_next_page"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/padding_mid"
            android:layout_weight="2.0"
            android:background="@color/alpha100"
            android:onClick="toNextPage"
            android:src="@drawable/next" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/honor"
        android:gravity="center"
        android:textSize="@dimen/text_size_app_name"
        android:layout_marginTop="@dimen/padding_mid"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/first"
        android:gravity="center"
        android:layout_marginTop="@dimen/padding_mid"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/second"
        android:gravity="center"
        android:layout_marginTop="@dimen/padding_mid"
        />

</LinearLayout>
