<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color_background"
    android:orientation="vertical">

    <!-- task tab LinearLayout -->
    <LinearLayout
        android:id="@+id/main_id_top_tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color_top_tab"
        android:orientation="horizontal"></LinearLayout>

    <!-- label tab LinearLayout -->
    <LinearLayout
        android:id="@+id/main_id_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color_label"
        android:orientation="horizontal">

        <!-- show app_name-->
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/text_color_87"
            android:textSize="@dimen/text_size_app_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0" />

        <ImageButton
            android:id="@+id/main_id_img_show_is_played"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_mid"
            android:background="@color/alpha100"
            android:onClick="stop_Or_start"
            android:src="@drawable/played4" />

    </LinearLayout>

    <ImageView
        android:id="@+id/main_id_img_me"
        android:layout_width="@dimen/img_width_height_large"
        android:layout_height="@dimen/img_width_height_large"
        android:layout_gravity="center"
        android:src="@drawable/me" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="right|center_vertical"
            android:paddingTop="@dimen/padding_mid"
            android:text="@string/name" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="left|center_vertical"
            android:paddingTop="@dimen/padding_mid"
            android:text="@string/my_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="right|center_vertical"
            android:paddingTop="@dimen/padding_mid"
            android:text="@string/age" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="left|center_vertical"
            android:paddingTop="@dimen/padding_mid"
            android:text="@string/my_age" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="right|center_vertical"
            android:paddingTop="@dimen/padding_mid"
            android:text="@string/university" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="left|center_vertical"
            android:paddingTop="@dimen/padding_mid"
            android:text="@string/my_university" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="right|center_vertical"
            android:paddingTop="@dimen/padding_mid"
            android:text="@string/city" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="left|center_vertical"
            android:paddingTop="@dimen/padding_mid"
            android:text="@string/my_city" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/text_size_app_name"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/main_id_img_last_page"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/padding_mid"
            android:layout_weight="1.0"
            android:background="@color/alpha100"
            android:src="@drawable/last"
            android:visibility="invisible" />

        <ImageButton
            android:id="@+id/main_id_img_next_page"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/padding_mid"
            android:layout_weight="1.0"
            android:background="@color/alpha100"
            android:onClick="toNextPage"
            android:src="@drawable/next" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:visibility="invisible" />


    </LinearLayout>


</LinearLayout>
